Fix ostrich-sans.css. Stylesheet was referencing the wrong font names.

--- a/webfonts/ostrich-sans.css
+++ b/webfonts/ostrich-sans.css
@@ -2,29 +2,44 @@
 
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-black.eot');
-	src: local('☺'), url('ostrich-sans-black.woff') format('woff'), url('ostrich-sans-black.ttf') format('truetype'), url('ostrich-sans-black.svg') format('svg');
+	src:  url('ostrich-black.eot');
+	src:  url('ostrich-black.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-black.woff') format('woff'), 
+	      url('ostrich-black.ttf') format('truetype'), 
+	      url('ostrich-black.svg') format('svg');
 	font-weight: 900;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-bold.eot');
-	src: local('☺'), url('ostrich-sans-bold.woff') format('woff'), url('ostrich-sans-bold.ttf') format('truetype'), url('ostrich-sans-bold.svg') format('svg');
+	src:  url('ostrich-bold.eot');
+	src:  url('ostrich-bold.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-bold.woff') format('woff'), 
+	      url('ostrich-bold.ttf') format('truetype'), 
+	      url('ostrich-bold.svg') format('svg');
 	font-weight: 700;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-regular.eot');
-	src: local('☺'), url('ostrich-sans-regular.woff') format('woff'), url('ostrich-sans-regular.ttf') format('truetype'), url('ostrich-sans-regular.svg') format('svg');
+	src:  url('ostrich-regular.eot');
+	src:  url('ostrich-regular.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-regular.woff') format('woff'),
+	      url('ostrich-regular.ttf') format('truetype'), 
+	      url('ostrich-regular.svg') format('svg');
 	font-weight: 400;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Ostrich Sans';
-	src: url('ostrich-sans-light.eot');
-	src: local('☺'), url('ostrich-sans-light.woff') format('woff'), url('ostrich-sans-light.ttf') format('truetype'), url('ostrich-sans-light.svg') format('svg');
+	src:  url('ostrich-light.eot');
+	src:  url('ostrich-light.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-light.woff') format('woff'), 
+	      url('ostrich-light.ttf') format('truetype'), 
+	      url('ostrich-light.svg') format('svg');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -33,8 +48,11 @@
 
 @font-face {
 	font-family: 'Ostrich Sans Dashed';
-	src: url('ostrich-dashed.eot');
-	src: local('☺'), url('ostrich-dashed.woff') format('woff'), url('ostrich-dashed.ttf') format('truetype'), url('ostrich-dashed.svg') format('svg');
+	src:  url('ostrich-dashed.eot');
+	src:  url('ostrich-dashed.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-dashed.woff') format('woff'), 
+	      url('ostrich-dashed.ttf') format('truetype'), 
+	      url('ostrich-dashed.svg') format('svg');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -43,8 +61,11 @@
 
 @font-face {
 	font-family: 'Ostrich Sans Rounded';
-	src: url('ostrich-rounded.eot');
-	src: local('☺'), url('ostrich-rounded.woff') format('woff'), url('ostrich-rounded.ttf') format('truetype'), url('ostrich-rounded.svg') format('svg');
+	src:  url('ostrich-rounded.eot');
+	src:  url('ostrich-rounded.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-rounded.woff') format('woff'), 
+	      url('ostrich-rounded.ttf') format('truetype'), 
+	      url('ostrich-rounded.svg') format('svg');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -53,15 +74,22 @@
 
 @font-face {
 	font-family: 'Ostrich Sans Inline';
-	src: url('ostrich-sans-inline-regular.eot');
-	src: local('☺'), url('ostrich-sans-inline-regular.woff') format('woff'), url('ostrich-sans-inline-regular.ttf') format('truetype'), url('ostrich-sans-inline-regular.svg') format('svg');
+	src:  url('ostrich-sans-inline-regular.eot');
+	src:  url('ostrich-sans-inline-regular.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-sans-inline-regular.woff') format('woff'), 
+	      url('ostrich-sans-inline-regular.ttf') format('truetype'), 
+	      url('ostrich-sans-inline-regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: 'Ostrich Sans Inline';
-	src: url('ostrich-sans-inline-italic.eot');
-	src: local('☺'), url('ostrich-sans-inline-italic.woff') format('woff'), url('ostrich-sans-inline-italic.ttf') format('truetype'), url('ostrich-sans-inline-italic.svg') format('svg');
+	src:  url('ostrich-sans-inline-italic.eot');
+	src:  url('ostrich-sans-inline-italic.eot?#iefix') format('embedded-opentype'),
+	      url('ostrich-sans-inline-italic.woff') format('woff'), 
+	      url('ostrich-sans-inline-italic.ttf') format('truetype'),
+	      url('ostrich-sans-inline-italic.svg') format('svg');
 	font-weight: normal;
 	font-style: italic;
 }
